2013-03-?? Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.6.0
	* Version 1.6.0 released

2013-02-05 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* ensrkhisttime: fixed memory fault [https://code.zmaw.de/boards/1/topics/1657]

2013-02-04 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Added CDO option -W to print extra warning messages

2013-01-30 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* New operator: ymonvar1    - Multi-year monthly variance [Divisor is (n-1)]
	* New operator: ymonstd1    - Multi-year monthly standard deviation [Divisor is(n-1)]
	* New operator: ydayvar1   - Multi-year daily variance [Divisor is (n-1)]
	* New operator: ydaystd1   - Multi-year daily standard deviation [Divisor is (n-1)]
	* New operator: yhourvar1   - Multi-year hourly variance [Divisor is (n-1)]
	* New operator: yhourstd1   - Multi-year hourly standard deviation [Divisor is (n-1)]
	* New operator: ydrunvar1    - Multi-year daily running variance [Divisor is (n-1)]
	* New operator: ydrunstd1    - Multi-year daily running standard deviation [Divisor is (n-1)]


2013-01-25 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

        * New operator: timvar1    - Time variance [Divisor is (n-1)]
	* New operator: timstd1    - Time standard deviation [Divisor is (n-1)]
        * New operator: hourvar1   - Hourly variance [Divisor is (n-1)]
	* New operator: hourstd1   - Hourly standard deviation [Divisor is (n-1)]
	* New operator: dayvar1    - Daily variance [Divisor is (n-1)]
	* New operator: daystd1    - Daily standard deviation [Divisor is (n-1)]
	* New operator: monvar1    - Monthly variance [Divisor is (n-1)]
	* New operator: monstd1    - Monthly standard deviation [Divisor is (n-1)]
	* New operator: yearvar1   - Yearly variance [Divisor is (n-1)]
	* New operator: yearstd1   - Yearly standard deviation [Divisor is (n-1)]

2013-01-23 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* New operator: ensstd1 - Ensemble standard deviation [Divisor is (n-1)]